--- a/shared/manager/roles/init-group/tasks/main.yml
+++ b/shared/manager/roles/init-group/tasks/main.yml
@@ -1,15 +1,11 @@
 ---
-- name: concat
-  ansible.builtin.set_fact:
+- name: set_fact
+  set_fact:
       group : "{{ groupname }}"
       gid : "{{ gid }}"
 
-- name: debug
-  ansible.builtin.debug:
-      var: group , gid
-
 - name: Manage group with correct gid
-  ansible.builtin.group:
+  group:
     name: "{{ group }}"
     state: present
     gid: "{{ gid }}"
