--- a/shared/manager/inventories/dev/group_vars/all.yml
+++ b/shared/manager/inventories/dev/group_vars/all.yml
@@ -2,3 +2,9 @@ PACKAGES_COMMON:
   - whois
   - python3
   - tree
+
+username: aUser
+uid: 1234
+userpasswd: $6$GOPKEGRyu3$FI6scdzk0dVdhlWfSN9lWAVuGJrHlf2GFt9/D0w.46pKubRqVxOq55Q2w6hgdoS84I5vc0a4VZqlqmCF8K.I.1
+groupname: aGroup
+gid: 1234
