--- a/shared/manager/roles/init-service/vars/main.yml
+++ b/shared/manager/roles/init-service/vars/main.yml
@@ -1,2 +1,2 @@
 sysd_user_services_folder: /usr/lib/systemd/system
-sysd_script: "{{ sysd_user_services_folder }}/{{ springboot_application_name }}.service"
+sysd_script: "{{ sysd_user_services_folder }}/{{ app_name }}.service"
