--- a/shared/manager/roles/install-service/tasks/main.yml
+++ b/shared/manager/roles/install-service/tasks/main.yml
@@ -23,10 +23,10 @@
     sb_app_name: "{{ instance_name }}"
     sb_app_group_id: "{{ microservice.group_id }}"
     sb_app_artifact_id: "{{ microservice.artifact_id }}"
-    sb_app_version: "{{ microservice.app_vesrion }}"
+    sb_app_version: "{{ microservice.app_version }}"
     sb_app_extension: jar
     sb_local_maven_artifact_dowload: false
-    sb_app_artifact_file: "{{ playbook_dir}}/artifacts/{{ microservice.artifact_id }}-{{ microservice.app_vesrion }}.jar"
+    sb_app_artifact_file: "{{ playbook_dir}}/artifacts/{{ microservice.artifact_id }}-{{ microservice.app_version }}.jar"
     sb_app_config_file_template_path: "{{ git_config_dir }}/{{ microservice.app_name }}/{{ microservice.properties_file_name_tpl }}"
     sb_applications_root_folder: "{{ microservice.app_dir}}/{{ instance_name }}"
     sb_app_config_file_final_name: "{{ microservice.properties_file_name }}"
