--- a/shared/manager/roles/role-springboot/defaults/main.yml
+++ b/shared/manager/roles/role-springboot/defaults/main.yml
@@ -20,8 +20,10 @@ sb_app_java_opts_xmx: 1024M
 sb_app_config_file_final_name: application.yml
 
 # initd conf
-sb_initd_pid_folder: "{{ sb_applications_root_folder }}/{{ sb_app_name | upper }}/run"
-sb_initd_log_folder: "{{ sb_applications_root_folder }}/{{ sb_app_name | upper }}/logs"
+#sb_initd_pid_folder: "{{ sb_applications_root_folder }}/{{ sb_app_name | upper }}/run"
+#sb_initd_log_folder: "{{ sb_applications_root_folder }}/{{ sb_app_name | upper }}/logs"
+sb_initd_pid_folder: "{{ sb_applications_root_folder }}/pid"
+sb_initd_log_folder: "{{ sb_applications_root_folder }}/log"
 sb_initd_log_filename: "{{ sb_app_name }}_out.log"
 
 sb_app_healthcheck_urls_validate_certs: no
