--- a/shared/manager/roles/role-springboot/tasks/main.yml
+++ b/shared/manager/roles/role-springboot/tasks/main.yml
@@ -7,19 +7,24 @@
 
 - name: Set application destination folder
   set_fact:
-    sb_app_artifact_destination_folder: "{{ sb_applications_root_folder }}/{{ sb_app_name | upper }}/{{ sb_app_version }}"
+    #sb_app_artifact_destination_folder: "{{ sb_applications_root_folder }}/{{ sb_app_name | upper }}/{{ sb_app_version }}"
+    sb_app_artifact_destination_folder: "{{ sb_applications_root_folder }}"
 
 - name: Set artifact destination file
   set_fact:
     sb_app_artifact_destination_file: "{{ sb_app_artifact_destination_folder }}/{{ sb_app_artifact_id }}-{{ sb_app_version }}.{{ sb_app_extension }}"
 
 - name: " Service | Check if use systemd"
-  set_fact: use_system_d={{ ansible_service_mgr == 'systemd' }}
+  set_fact: 
+    use_system_d: false
+  #set_fact: use_system_d={{ ansible_service_mgr == 'systemd' }}
 
 - debug: var=ansible_distribution_version
 
 - name: " Service | Check if use use_initd"
-  set_fact: use_initd={{ ansible_service_mgr == 'sysvinit' }}
+  set_fact: 
+    use_initd: true
+  #set_fact: use_initd={{ ansible_service_mgr == 'sysvinit' }}
 
 - import_tasks: install.yml
   when: >
