--- a/shared/manager/roles/role-springboot/tasks/service.yml
+++ b/shared/manager/roles/role-springboot/tasks/service.yml
@@ -18,7 +18,8 @@
 
 - name: "Service | Ensure app artifact initd symlink exist"
   file:
-    src: "{{ sb_applications_root_folder }}/{{ sb_app_name | upper }}/{{ sb_app_version }}/{{ sb_app_artifact_id }}-{{ sb_app_version }}.{{ sb_app_extension }}"
+    src: "{{ sb_applications_root_folder }}/{{ sb_app_artifact_id }}-{{ sb_app_version }}.{{ sb_app_extension }}"
+    #src: "{{ sb_applications_root_folder }}/{{ sb_app_name | upper }}/{{ sb_app_version }}/{{ sb_app_artifact_id }}-{{ sb_app_version }}.{{ sb_app_extension }}"
     dest: "/etc/init.d/{{ sb_app_name | lower }}"
     state: link
     owner: "{{ sb_app_user }}"
@@ -34,4 +35,5 @@
     name: "{{  sb_app_name | lower }}"
     enabled: yes
     state: started
+    use: sysvinit
   become: true
